# workz

JavaScript/: function.js  hello.html  hello.js  operator.js  variable.js
c++/call-c/: Makefile  hello.c  hello.h  test.cpp
c++/test/: Makefile  test.cpp
c/cirq/: Makefile  cirq.c  cirq.h  test.c
c/cpp/: config.h  test.c  test.h
c/env/: env.c
c/file/: file.c  in.txt
c/func_overloading/: fo.c
c/getopt/: getopt.c
c/mutex/: mt.c
c/pthread/: Makefile  pthread.c
c/regex/: Makefile  regex.c
c/sconf/: config.cfg  sconf.c
c/settimer/: settimer.c
c/signal/: signal.c
cJSON/: Makefile  cJSON.c  test.c
cJSON-cjsonx/: Makefile  cJSON.c  cJSON.h  cjson  cjson.c  cjson.sh  cjson_log.h  data.json  data_full.json  json_decode.sh  json_encode.sh  nms.debug  reply.json  test  test.c  test.sh  zinet.c  zinet.h  zut.h
git/: .gitconfig  .gitignore  README.md  branch  config  operate  prompt  repository  upload_from_host
html/: cgi-bin  cgi-lib  home.html  index.html  inform.html  login.html  outer.html  rd_login.html  web_noti.html
libz/: nms_status  test.c  zinet.h  zlogger.h
makefile/cmake/hello-project/hello/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  main.cpp
makefile/cmake/modoo/: CMakeLists.txt  main.cc
makefile/cmake/modoo/lib/: CMakeLists.txt  shape.cc
makefile/cmake/sample/: CMakeLists.txt  bar.c  cmake.sh  foo.c  main.c  readme.txt
sconf.sh/: sample.conf  sconf.sh
sh/: file.sh  for.sh  getopt.sh  if.sh  math.sh  str_empty.sh  test.sh  var.sh  while.sh
telnet/: Makefile
xml.c-test/: Makefile  test.c
(+311 files in other folders)
